Setting up the Developing Environment

--- a/github.api/tsconfig.json
+++ b/github.api/tsconfig.json
@@ -5,24 +5,19 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-    
-    /* Emit */
-    "sourceMap": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "outDir": "./dist",
     "noEmit": true,
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true, 
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"]
 }
